--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -1,4 +1,11 @@
-<h1>Heroes App</h1>
-<hr />
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav>
+    <h1>Sidenav</h1>
+  </mat-sidenav>
 
-<router-outlet></router-outlet>
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </mat-toolbar>
+</mat-sidenav-container>
