Autocomplete - Segunda Parte

--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -16,7 +16,11 @@
         [matAutocomplete]="auto"
         (input)="buscando()"
       />
-      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+      <mat-autocomplete
+        autoActiveFirstOption
+        #auto="matAutocomplete"
+        (optionSelected)="opcionSeleccionada($event)"
+      >
         <mat-option *ngFor="let heroe of heroes" [value]="heroe">
           {{ heroe.superhero }}
         </mat-option>
@@ -24,3 +28,5 @@
     </mat-form-field>
   </div>
 </div>
+
+<span> {{ heroeSeleccionado | json }} </span>
