--- a/src/app/heroes/pages/buscar/buscar.component.html
+++ b/src/app/heroes/pages/buscar/buscar.component.html
@@ -3,7 +3,7 @@
     <h1>Buscador de Héroes</h1>
     <mat-divider></mat-divider>
   </div>
-  <div>
+  <div fxLayout="column">
     <h3>Buscador</h3>
 
     <mat-form-field>
@@ -24,9 +24,15 @@
         <mat-option *ngFor="let heroe of heroes" [value]="heroe">
           {{ heroe.superhero }}
         </mat-option>
+        <mat-option *ngIf="heroes.length === 0 && termino.trim().length > 0" value="">
+          No se encontró ningún heroe llamado <strong>{{ termino }}</strong
+          >.
+        </mat-option>
       </mat-autocomplete>
     </mat-form-field>
   </div>
 </div>
+
+<div></div>
 
 <span> {{ heroeSeleccionado | json }} </span>
