--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,1 +1,52 @@
-<p>agregar works!</p>
+<h1>Nuevo Heroe <small>asd</small></h1>
+
+<div fxLayout="row" fxLayoutGap="40px">
+  <div fxFlex="50" fxLayout="column">
+    <div fxLayout="row" fxLayoutGap="20px">
+      <mat-form-field fxFlex="100">
+        <mat-label>Super Hèroe</mat-label>
+        <input matInput type="text" required />
+      </mat-form-field>
+
+      <mat-form-field fxFlex="100">
+        <mat-label>Alter Ego</mat-label>
+        <input matInput type="text" required />
+      </mat-form-field>
+    </div>
+
+    <mat-form-field>
+      <mat-label>Primera Aparicion</mat-label>
+      <input matInput type="text" required />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Personajes</mat-label>
+      <input matInput type="text" required />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Creador</mat-label>
+      <input matInput type="text" required />
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Creador</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let item of publishers" [value]="item.id">
+          {{ item.desc }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+      <mat-label>Foto URL</mat-label>
+      <input matInput type="url" required />
+    </mat-form-field>
+    <br>
+    <button mat-raised-button color="warn"><mat-icon>save</mat-icon> Guardar</button>
+  </div>
+
+  <div fxFlex="50">
+    <img [src]="heroe | imagen">
+  </div>
+</div>
