--- a/src/app/heroes/pages/agregar/agregar.component.html
+++ b/src/app/heroes/pages/agregar/agregar.component.html
@@ -1,37 +1,46 @@
-<h1>Nuevo Heroe <small>asd</small></h1>
+<h1>
+  Nuevo Heroe <small>{{ heroe.superhero }}</small>
+</h1>
 
-<div fxLayout="row" fxLayoutGap="40px">
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column">
   <div fxFlex="50" fxLayout="column">
-    <div fxLayout="row" fxLayoutGap="20px">
+    <div
+      fxLayout="row"
+      fxLayout.sm="column"
+      fxLayout.xs="column"
+      fxLayoutGap="20px"
+      fxLayoutGap.sm="0px"
+      fxLayoutGap.xs="0px"
+    >
       <mat-form-field fxFlex="100">
-        <mat-label>Super Hèroe</mat-label>
-        <input matInput type="text" required />
+        <mat-label>Super Héroe</mat-label>
+        <input matInput type="text" [(ngModel)]="heroe.superhero" required />
       </mat-form-field>
 
       <mat-form-field fxFlex="100">
         <mat-label>Alter Ego</mat-label>
-        <input matInput type="text" required />
+        <input matInput type="text" [(ngModel)]="heroe.alter_ego" required />
       </mat-form-field>
     </div>
 
     <mat-form-field>
       <mat-label>Primera Aparicion</mat-label>
-      <input matInput type="text" required />
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="heroe.first_appearance"
+        required
+      />
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Personajes</mat-label>
-      <input matInput type="text" required />
+      <input matInput type="text" [(ngModel)]="heroe.characters" required />
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Creador</mat-label>
-      <input matInput type="text" required />
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>Creador</mat-label>
-      <mat-select>
+      <mat-select [(ngModel)]="heroe.publisher" required>
         <mat-option *ngFor="let item of publishers" [value]="item.id">
           {{ item.desc }}
         </mat-option>
@@ -40,13 +49,15 @@
 
     <mat-form-field>
       <mat-label>Foto URL</mat-label>
-      <input matInput type="url" required />
+      <input matInput type="url" [(ngModel)]="heroe.alt_img" required />
     </mat-form-field>
-    <br>
-    <button mat-raised-button color="warn"><mat-icon>save</mat-icon> Guardar</button>
+    <br />
+    <button mat-raised-button color="warn" (click)="guardar()">
+      <mat-icon>save</mat-icon> Guardar
+    </button>
   </div>
 
   <div fxFlex="50">
-    <img [src]="heroe | imagen">
+    <img [src]="heroe | imagen" />
   </div>
 </div>
