--- a/src/app/heroes/components/confirmar/confirmar.component.html
+++ b/src/app/heroes/components/confirmar/confirmar.component.html
@@ -1,7 +1,7 @@
 <h1>Estás seguro!?</h1>
 <hr />
 <p>
-  Está a punto de eliminar a
+  Está a punto de eliminar a {{data.superhero}}
   <br />
   ¿Desea continuar?
 </p>
