--- a/src/app/heroes/pages/home/home.component.html
+++ b/src/app/heroes/pages/home/home.component.html
@@ -29,6 +29,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="spacer"></span>
+    <span>{{ auth.usuario }}</span>
     <button mat-button (click)="logout()">
       <mat-icon>logout</mat-icon>
       Logout
